<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id="@+id/floating_top_bar_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_rect_white"
        android:elevation="8dp"
        android:padding="16dp"
        app:bnc_mode="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            app:bt_colorActive="@color/red_active"
            app:bt_colorInactive="@color/red_inactive"
            app:bt_icon="@drawable/ic_movie"
            app:bt_shape="@drawable/rounded_rect"
            app:bt_shapeColor="@color/red_bg_light"
            app:bt_title="@string/movie" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/tvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/blue_active"
            app:bt_colorInactive="@color/blue_inactive"
            app:bt_icon="@drawable/ic_live_tv"
            app:bt_shape="@drawable/rounded_rect"
            app:bt_shapeColor="@color/blue_bg_light"
            app:bt_title="@string/tvShow" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/blue_grey_active"
            app:bt_colorInactive="@color/blue_grey_inactive"
            app:bt_icon="@drawable/ic_favorite"
            app:bt_shape="@drawable/rounded_rect"
            app:bt_shapeColor="@color/blue_grey_bg_light"
            app:bt_title="@string/favorite" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_colorActive="@color/green_active"
            app:bt_colorInactive="@color/green_inactive"
            app:bt_icon="@drawable/ic_settings"
            app:bt_shape="@drawable/rounded_rect"
            app:bt_shapeColor="@color/green_bg_light"
            app:bt_title="@string/setting" />
    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>

</android.support.constraint.ConstraintLayout>